Nuevo contenido en el HTML, más secciones y correcciones a errores

--- a/index.html
+++ b/index.html
@@ -54,6 +54,30 @@
             <h3>Download the extension</h3>
             <p>We ve got more browsers in the pipeline. please do let us knowif you've got a favourite you'd like us to prioritize.</p>
         </div>
+        <div class="mini_containers">
+            <div class="first_mini">
+                <img src="./images/logo-chrome.svg">
+                <h4>Add to Chrome</h4>
+                <p>Miniium version 62</p>
+                <img src="./images/bg-dots.svg">
+                <button>Add & install extension</button>
+            </div>
+            <div class="second_mini">
+                <img src="./images/logo-firefox.svg">
+                <h4>Add to Firefox</h4>
+                <p>Minium version 55</p>
+                <img src="./images/bg-dots.svg">
+                <button>Add & install extension</button>
+
+            </div>
+            <div class="third_mini">
+                <img src="./images/logo-opera.svg">
+                <h4>Add to Opera</h4>
+                <p>Minium version 46</p>
+                <img src="./images/bg-dots.svg">
+                <button>Add & install extension</button>
+            </div>
+        </div>
     </main>
 
     <script src="./scripts/script.js"></script>
