Estructura preliminar HTML

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         </div>
         <div class="second_container">
             <h2>Features</h2>
-            <p>Our aim is to make a quick and easy for you to access your favorite websites. Your bookmarks sync betweenyour devices so you can access them on the go.</p>
+            <p>Our aim is to make a quick and easy for you to access your favorite websites. Your bookmarks sync
+                betweenyour devices so you can access them on the go.</p>
 
             <button id="simple">Simple Bookmark</button>
             <button id="speedy">Speedy Searching</button>
@@ -52,7 +53,8 @@
 
         <div class="third_container">
             <h3>Download the extension</h3>
-            <p>We ve got more browsers in the pipeline. please do let us knowif you've got a favourite you'd like us to prioritize.</p>
+            <p>We ve got more browsers in the pipeline. please do let us knowif you've got a favourite you'd like us to
+                prioritize.</p>
         </div>
         <div class="mini_containers">
             <div class="first_mini">
@@ -78,8 +80,22 @@
                 <button>Add & install extension</button>
             </div>
         </div>
+        <div class="fourth_container">
+            <h5>Frequently Asked Questions</h5>
+            <p>Here are some of our FAQs. If you have any other questions, you'd like answered please free free to email us.</p>
+            <div class="acordeon">
+
+            </div>
+            <button>More Info</button>
+        </div>
+        <div class="five_container">
+
+        </div>
     </main>
 
+    <footer>
+        
+    </footer>
     <script src="./scripts/script.js"></script>
 </body>
 
