Adición de estilos mediante CSS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <link rel="stylesheet" href="./styles/style.css">
     <script src="https://kit.fontawesome.com/70d1ba42cb.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
     <title>Reto 1</title>
 </head>
 
@@ -60,7 +64,7 @@
             <div class="first_mini">
                 <img src="./images/logo-chrome.svg">
                 <h4>Add to Chrome</h4>
-                <p>Miniium version 62</p>
+                <p>Minium version 62</p>
                 <img src="./images/bg-dots.svg">
                 <button>Add & install extension</button>
             </div>
@@ -94,7 +98,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
     <script src="./scripts/script.js"></script>
 </body>
