Nuevas imágenes, funciones de JS y estilos mejorados

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./styles/style.css">
     <script src="https://kit.fontawesome.com/70d1ba42cb.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
     <title>Reto 1</title>
 </head>
 
@@ -48,11 +48,20 @@
             <h2>Features</h2>
             <p>Our aim is to make a quick and easy for you to access your favorite websites. Your bookmarks sync
                 betweenyour devices so you can access them on the go.</p>
+            <div class="buttons">
+                <div class="button_line">
+                    <button id="simple">Simple Bookmarking</button>
+                </div>
+                <div class="button_line">
+                    <button id="speedy">Speedy Searching</button>
+                </div>
+                <div class="button_line">
+                    <button id="easy">Easy Sharing</button>
+                </div>
+                <div id="insert_content">
 
-            <button id="simple">Simple Bookmark</button>
-            <button id="speedy">Speedy Searching</button>
-            <button id="easy">Easy Sharing</button>
-
+                </div>
+            </div>
         </div>
 
         <div class="third_container">
@@ -86,7 +95,8 @@
         </div>
         <div class="fourth_container">
             <h5>Frequently Asked Questions</h5>
-            <p>Here are some of our FAQs. If you have any other questions, you'd like answered please free free to email us.</p>
+            <p>Here are some of our FAQs. If you have any other questions, you'd like answered please free free to email
+                us.</p>
             <div class="acordeon">
 
             </div>
