Actualización de archivos

--- a/index.html
+++ b/index.html
@@ -58,8 +58,21 @@
                 <div class="button_line">
                     <button id="easy">Easy Sharing</button>
                 </div>
-                <div id="insert_content">
 
+            </div>
+            <div id="insert_content">
+                <div class="container_drop">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <img class="img-card" src="../images/captura_boton_1.PNG"></img>
+                                    <h5 class="card-title">Bookmark in one click</h5>
+                                    <p class="card-text">organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favorite sites.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -71,14 +84,14 @@
         </div>
         <div class="mini_containers">
             <div class="first_mini">
-                <img src="./images/logo-chrome.svg">
+                <img class="navegador" src="./images/logo-chrome.svg">
                 <h4>Add to Chrome</h4>
                 <p>Minium version 62</p>
                 <img src="./images/bg-dots.svg">
                 <button>Add & install extension</button>
             </div>
             <div class="second_mini">
-                <img src="./images/logo-firefox.svg">
+                <img class="navegador" src="./images/logo-firefox.svg">
                 <h4>Add to Firefox</h4>
                 <p>Minium version 55</p>
                 <img src="./images/bg-dots.svg">
@@ -86,7 +99,7 @@
 
             </div>
             <div class="third_mini">
-                <img src="./images/logo-opera.svg">
+                <img class="navegador" src="./images/logo-opera.svg">
                 <h4>Add to Opera</h4>
                 <p>Minium version 46</p>
                 <img src="./images/bg-dots.svg">
