--- a/index.html
+++ b/index.html
@@ -111,7 +111,14 @@
             <p>Here are some of our FAQs. If you have any other questions, you'd like answered please free free to email
                 us.</p>
             <div class="acordeon">
-
+                <div class="subapartado">
+                    <div class="acordeon_titulo">
+                        <h4>What is a bookmark?</h4>
+                    </div>
+                    <div class="info">
+                        <p>lorem ipsum dolor sit amet, consectetur adip iscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                </div>
             </div>
             <button>More Info</button>
         </div>
