--- a/index.html
+++ b/index.html
@@ -114,16 +114,47 @@
                 <div class="subapartado">
                     <div class="acordeon_titulo">
                         <h4>What is a bookmark?</h4>
+                        <img src="./images/icon-arrow.svg">
                     </div>
                     <div class="info">
-                        <p>lorem ipsum dolor sit amet, consectetur adip iscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>lorem ipsum dolor sit amet, consectetur adip iscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    </div>
+                </div>
+
+                <div class="subapartado">
+                    <div class="acordeon_titulo">
+                        <h4>How can i request a new browser?</h4>
+                        <img src="./images/icon-arrow.svg">
+                    </div>
+                    <div class="info">
+                        <p>lorem ipsum dolor sit amet, consectetur adip iscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    </div>
+                </div>
+
+                <div class="subapartado">
+                    <div class="acordeon_titulo">
+                        <h4>is there a mobile app?</h4>
+                        <img src="./images/icon-arrow.svg">
+                    </div>
+                    <div class="info">
+                        <p>lorem ipsum dolor sit amet, consectetur adip iscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    </div>
+                </div>
+
+                <div class="subapartado">
+                    <div class="acordeon_titulo">
+                        <h4>What about other chromium browsers?</h4>
+                        <img src="./images/icon-arrow.svg">
+                    </div>
+                    <div class="info">
+                        <p>lorem ipsum dolor sit amet, consectetur adip iscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                     </div>
                 </div>
             </div>
             <button>More Info</button>
         </div>
         <div class="five_container">
-
+            
         </div>
     </main>
 
