Responsive design mobile finished

--- a/index.html
+++ b/index.html
@@ -154,12 +154,36 @@
             <button>More Info</button>
         </div>
         <div class="five_container">
-            
+            <p>+35,000 already joined</p>
+            <h6>Stay up-to-date with that we're doing</h6>
+            <form>
+                <input type="email" placeholder="Your email" required>
+                <button>Contact Us</button>
+            </form>
         </div>
     </main>
 
-    <footer>
-
+    <footer class="pie-pagina">
+        <div class="grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img src="./images/Bookmark_blanco.PNG">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <p>Features</p>
+                <p>Pricing</p>
+                <p>Contact</p>
+            </div>
+            <div class="box">
+                <div class="red-social">
+                    <a  class="fa fa-facebook"></a>
+                    <a  class="fa fa-twitter"></a>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="./scripts/script.js"></script>
 </body>
